--- a/example-junit5/build.gradle
+++ b/example-junit5/build.gradle
@@ -29,20 +29,6 @@ buildscript {
 //}
 apply from: '../general-settings.gradle'
 
-/**
- * Using of the org.junit.platform.gradle.plugin is optional.
- * If it is not applies, all the tests run normally and test listener is invoked
- *
- * If the plugin is applied, to ensure test listener is working,
- * the following configuration must be done:
- *
- * junitPlatform {
- * 		if (project.hasProperty('sl')) {
- * 	    	enableStandardTestTask true
- * 		}
- * }
- */
-
 apply plugin: 'org.junit.platform.gradle.plugin'
 
 ext.junit4Version        = '4.12'
@@ -99,38 +85,6 @@ test {
  * This block is used because the org.junit.platform.gradle.plugin is applied
  */
 junitPlatform {
-//	enableStandardTestTask true
-	if (project.hasProperty('sl')) {
-		enableStandardTestTask true
-	}
-	// reportsDir file('build/test-results/junit-platform') // this is the default
-	// logManager 'org.apache.logging.log4j.jul.LogManager'
-}
-
-//// This is investigation for junit5 with junitPlatform
-//junitPlatform {
-//	afterEvaluate {
-//		def junitPlatformTestTask = tasks.getByName('junitPlatformTest')
-////		if (project.hasProperty('sl')) {
-////			junitPlatformTestTask.jvmArgs project.ext.sealights.javaAgentArg
-////			junitPlatformTestTask.systemProperties(project.sealights.javaAgentJvmParams)
-////		}
-//		println "junitPlatformTestTask.name: " + junitPlatformTestTask.name
-////		println "junitPlatformTestTask.jvmArgs" + junitPlatformTestTask.jvmArgs
-////		println "junitPlatformTestTask.systemProperties" + junitPlatformTestTask.systemProperties
-//	}
-//}
-
-//junitPlatformTest {
-//	doFirst {
-//		println "From junitPlatformTest.name: " + junitPlatformTest.name
-//		if (project.hasProperty('sl')) {
-//			jvmArgs sealights.javaAgentArg
-//			systemProperties(sealights.javaAgentJvmParams)
-//		}
-//	}
-//}
-//junitPlatform {
 //	filters {
 //		engines {
 //			// include 'junit-jupiter', 'junit-vintage'
@@ -141,37 +95,15 @@ junitPlatform {
 //			exclude 'slow'
 //		}
 //		// includeClassNamePattern '.*Test'
-//		//enableStandardTestTask true
+//		// This configuration cases to run all tests in the old way as Test task
+//		// and not as junitPlatformTask
 //		if (project.hasProperty('sl')) {
 //			 //enableStandardTestTask true
 //		}
 //		// reportsDir file('build/test-results/junit-platform') // this is the default
 //		// logManager 'org.apache.logging.log4j.jul.LogManager'
 //	}
-//}
-
-//allprojects {
-//	println "TEST ME"
-//	tasks.withType(JavaExec) {
-//		if (it.name == 'junitPlatformTest') {
-//			doFirst {
-//				println "args: ${args}"
-//				println "sysProps: ${systemProperties}"
-//			}
-//		}
-//		if (it.name == 'junitPlatformTest' && project.hasProperty('sl')) {
-//			doFirst {
-//				println sealights
-//				println "args: ${args}"
-//				println "sysProps: ${systemProperties}"
-//				println "sealights.javaAgentArg: ${sealights.javaAgentArg}"
-//				println "sealights.javaAgentJvmParams: ${sealights.javaAgentJvmParams}"
-////				args sealights.javaAgentArg + " " args
-////				systemProperties systemProperties + sealights.javaAgentJvmParams
-//			}
-//		}
-//	}
-//}
+}
 
 task wrapper(type: Wrapper) {
 	description = 'Generates gradlew[.bat] scripts'
@@ -193,6 +125,7 @@ if (project.apply_sealights_in_subproject) {
 	sealights {
 		appName = "GradleExampleJunit5"
 		sealightsJvmParams=["sl.junitVersion":"5"]
+        testTasks=["kuku","test", "junitPlatformTest"]
 	}
 	println "Applied the subproject appName = $sealights.appName"
 	ext.appName = ["$sealights.appName"]
