--- a/pom.xml
+++ b/pom.xml
@@ -59,23 +59,19 @@
 				<plugin>
 					<groupId>io.sealights.on-premise.agents.plugin</groupId>
 					<artifactId>sealights-maven-plugin</artifactId>
-					<version>2.0.0</version>
-					<!-- <version>2.0.237</version> -->
+					<!-- This is for local version under development -->
+					<!-- <version>2.0.0</version> -->
+					<version>2.0.300</version>
 					<configuration>
 						<includeResources>true</includeResources>
 						<!--Path to valid token should be set-->
 						<!--<tokenFile>path/to/token</tokenFile>-->
-						<tokenFile>C:\SL\ENV\tokens\sl_token_ala.txt</tokenFile>
-						<!-- <tokenFile>sl_ala1_token.txt</tokenFile> -->
-						<!-- <buildSessionId>b81b98f8ce739d3247e048c4cd777563</buildSessionId> -->
-						<!-- <buildSessionIdFile>buildSessionId.txt</buildSessionIdFile> -->
- 						<!--<appName>AllMavenExamples</appName>-->
+						<!-- <tokenFile>C:\SL\ENV\tokens\sl_token_ala.txt</tokenFile> -->
 						<build>${sl.build}</build>
 						<branch>master</branch>
 						<createBuildSessionId>true</createBuildSessionId>
 						<moduleName>${project.name}</moduleName>
 						<workspacepath>${project.build.outputDirectory}</workspacepath>
-						<!-- <workspacepath>.\MavenExample</workspacepath> -->
 						<filesincluded>*.class</filesincluded>
 						<filesStorage>/tmp</filesStorage>
 						<packagesincluded>io.sl.ex.*</packagesincluded>
@@ -92,10 +88,8 @@
 						<!--<proxy>127.0.0.1:8888</proxy> -->
 						<!--<server>http://54.154.181.128:8080/api</server> -->
 						<sendContributors>true</sendContributors>
-						<testListenerJar>C:\Users\ala schneider\Dev\SL.OnPremise.Agents.Java\java-agent-bootstrapper\target\java-agent-bootstrapper-1.0.0-SNAPSHOT.jar</testListenerJar>
-						<buildScannerJar>C:\Users\ala schneider\Dev\SL.OnPremise.Agents.Java\java-build-agent\target\java-build-agent-1.0.0-SNAPSHOT.jar</buildScannerJar>
-						<!-- <buildScannerJar>sl-build-scanner.jar</buildScannerJar> 
-						<testListenerJar>sl-test-listener.jar</testListenerJar> -->
+						<!--<testListenerJar>C:\Users\ala schneider\Dev\SL.OnPremise.Agents.Java\java-agent-bootstrapper\target\java-agent-bootstrapper-1.0.0-SNAPSHOT.jar</testListenerJar>  -->
+						<!--<buildScannerJar>C:\Users\ala schneider\Dev\SL.OnPremise.Agents.Java\java-build-agent\target\java-build-agent-1.0.0-SNAPSHOT.jar</buildScannerJar>  -->
 						<sealightsJvmParams>
 							<!-- <sl.scm.baseUrl>https://github.com/alasch2/MavenExample/</sl.scm.baseUrl> -->
 							<!-- <sl.scm>none</sl.scm> -->
@@ -214,7 +208,6 @@
 						<!-- using different application name and packages -->
 						<configuration>
 							<appName>AllMavenExamples</appName>
-<!-- 							<packagesincluded>io.sl.ex.*</packagesincluded> -->
 						</configuration>
 					</plugin>
 					
