--- a/example-cassandra/pom.xml
+++ b/example-cassandra/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.2.RELEASE</version>
+		<version>2.0.1.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -23,6 +23,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<spring.framework.version>5.0.6.RELEASE</spring.framework.version>
 		<java.version>1.8</java.version>
+		<maven.resource.plugin.version>3.0.2</maven.resource.plugin.version>
 	</properties>
 
 	<dependencies>
@@ -31,11 +32,22 @@
 			<artifactId>spring-boot-starter-data-cassandra</artifactId>
 		</dependency>
 
-        <dependency>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-tomcat</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jetty</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -44,7 +56,6 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-cassandra</artifactId>
-			<version>2.0.7.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -52,15 +63,205 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-	<build>
+	
+<!-- 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+				</plugin>
+				<plugin>
+					<groupId>io.sealights.on-premise.agents.plugin</groupId>
+					<artifactId>sealights-maven-plugin</artifactId>
+					<version>2.0.287</version>
+					<version>2.0.300</version>
+					<configuration>
+						<includeResources>true</includeResources>
+						<tokenFile>C:\SL\ENV\tokens\sl_token_ala.txt</tokenFile>
+						<tokenFile>C:\SL\ENV\tokens\sl_token_ala.txt</tokenFile>
+						<buildSessionId>b81b98f8ce739d3247e048c4cd777563</buildSessionId>
+						<buildSessionIdFile>buildSessionId.txt</buildSessionIdFile>
+						<appName>MavenSpringCassandraExample</appName>
+						<build>${sl.build}</build>
+						<branch>master</branch>
+						<createBuildSessionId>true</createBuildSessionId>
+						<moduleName>${project.name}</moduleName>
+						<workspacepath>${project.build.outputDirectory}</workspacepath>
+						<filesincluded>*.class</filesincluded>
+						<filesStorage>/tmp</filesStorage>
+						<packagesincluded>io.sl.ex.*</packagesincluded>
+						<filesexcluded>*test-classes*</filesexcluded>
+						<logEnabled>false</logEnabled>
+						<logLevel>info</logLevel>
+						<testStage>Unit Tests</testStage>
+						<enableUpgrade>true</enableUpgrade>
+						<baseSourceFolder>./src/main/java</baseSourceFolder>
+						This is for fiddler
+						<proxy>127.0.0.1:8888</proxy>
+						<server>http://54.154.181.128:8080/api</server>
+						<sendContributors>true</sendContributors>
+						<testListenerJar>C:\Users\ala schneider\Dev\SL.OnPremise.Agents.Java\java-agent-bootstrapper\target\java-agent-bootstrapper-1.0.0-SNAPSHOT.jar</testListenerJar>
+						<buildScannerJar>C:\Users\ala schneider\Dev\SL.OnPremise.Agents.Java\java-build-agent\target\java-build-agent-1.0.0-SNAPSHOT.jar</buildScannerJar>
+						<testListenerJar>C:\Users\ala schneider\Dev\Playground\sl-test-listener-1.9.790.jar</testListenerJar>
+						<buildScannerJar>C:\Users\ala schneider\Dev\Playground\sl-build-scanner-1.9.790.jar</buildScannerJar>
+						<metadata>
+						<jobName>${JOB_NAME}</jobName>
+						<logsUrl>${BUILD_URL}/console</logsUrl>
+						</metadata>
+					</configuration>
+					<executions>
+						<execution>
+							<id>a1</id>
+							<goals>
+								<goal>build-scanner</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>a2</id>
+							<goals>
+								<goal>test-listener</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 		</plugins>
 	</build>
+
+ -->
+<!-- 	<build> -->
+<!-- 		<pluginManagement> -->
+<!-- 			<plugins> -->
+
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.springframework.boot</groupId> -->
+<!-- 					<artifactId>spring-boot-maven-plugin</artifactId> -->
+<!-- 				</plugin> -->
+				
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 					<artifactId>maven-surefire-plugin</artifactId> -->
+<!-- 				</plugin> -->
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 					<artifactId>maven-resources-plugin</artifactId> -->
+<!-- 					<version>${maven.resource.plugin.version}</version> -->
+<!-- 				</plugin> -->
+				
+<!-- 			</plugins> -->
+<!-- 		</pluginManagement> -->
+
+<!-- 	</build> -->
+
+	<profiles>
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+				</plugin>
+				
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 					<artifactId>maven-surefire-plugin</artifactId> -->
+<!-- 				</plugin> -->
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 					<artifactId>maven-resources-plugin</artifactId> -->
+<!-- 					<version>${maven.resource.plugin.version}</version> -->
+<!-- 				</plugin> -->
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>sl</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+				</plugin>
+				
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 					<artifactId>maven-surefire-plugin</artifactId> -->
+<!-- 					<version>2.19.1</version> -->
+<!-- 				</plugin> -->
+<!-- 				<plugin> -->
+<!-- 					<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 					<artifactId>maven-resources-plugin</artifactId> -->
+<!-- 					<version>${maven.resource.plugin.version}</version> -->
+<!-- 				</plugin> -->
+				<plugin>
+					<groupId>io.sealights.on-premise.agents.plugin</groupId>
+					<artifactId>sealights-maven-plugin</artifactId>
+					<!-- <version>2.0.287</version> -->
+					<version>2.0.0</version>
+					<configuration>
+						<includeResources>true</includeResources>
+						<tokenFile>C:\SL\ENV\tokens\sl_token_ala.txt</tokenFile>
+						<!-- <tokenFile>C:\SL\ENV\tokens\sl_token_ala.txt</tokenFile> -->
+						<!--<buildSessionId>b81b98f8ce739d3247e048c4cd777563</buildSessionId> -->
+						<!--<buildSessionIdFile>buildSessionId.txt</buildSessionIdFile> -->
+						<appName>MavenSpringCassandraExample</appName>
+						<build>${sl.build}</build>
+						<branch>master</branch>
+						<createBuildSessionId>true</createBuildSessionId>
+						<moduleName>${project.name}</moduleName>
+						<workspacepath>${project.build.outputDirectory}</workspacepath>
+						<filesincluded>*.class</filesincluded>
+						<filesStorage>/tmp</filesStorage>
+						<packagesincluded>io.sl.ex.*</packagesincluded>
+						<filesexcluded>*test-classes*</filesexcluded>
+						<logEnabled>false</logEnabled>
+						<logLevel>info</logLevel>
+						<testStage>Unit Tests</testStage>
+						<enableUpgrade>true</enableUpgrade>
+						<!--<baseSourceFolder>./src/main/java</baseSourceFolder> -->
+						<!-- This is for fiddler -->
+						<!--<proxy>127.0.0.1:8888</proxy> -->
+						<!--<server>http://54.154.181.128:8080/api</server> -->
+						<!--<sendContributors>true</sendContributors> -->
+						<testListenerJar>C:\Users\ala schneider\Dev\SL.OnPremise.Agents.Java\java-agent-bootstrapper\target\java-agent-bootstrapper-1.0.0-SNAPSHOT.jar</testListenerJar>
+						<buildScannerJar>C:\Users\ala schneider\Dev\SL.OnPremise.Agents.Java\java-build-agent\target\java-build-agent-1.0.0-SNAPSHOT.jar</buildScannerJar>
+						<!--<testListenerJar>C:\Users\ala schneider\Dev\Playground\sl-test-listener-1.9.790.jar</testListenerJar> -->
+						<!--<buildScannerJar>C:\Users\ala schneider\Dev\Playground\sl-build-scanner-1.9.790.jar</buildScannerJar> -->
+						<!-- <metadata> -->
+						<!-- <jobName>${JOB_NAME}</jobName> -->
+						<!-- <logsUrl>${BUILD_URL}/console</logsUrl> -->
+						<!-- </metadata> -->
+					</configuration>
+					<executions>
+						<execution>
+							<id>a1</id>
+							<goals>
+								<goal>build-scanner</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>a2</id>
+							<goals>
+								<goal>test-listener</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 
 </project>
