--- a/example-junit-only/pom.xml
+++ b/example-junit-only/pom.xml
@@ -14,8 +14,6 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<mockito.version>1.10.19</mockito.version>
-		<powermock.version>1.7.1</powermock.version>
 		<!-- The property demands active debug session in Inteliji -->
 <!-- 		<sldebug>${sldebugOn}</sldebug> -->
 		<sldebug> </sldebug>
@@ -59,25 +57,6 @@
 		  <scope>test</scope>
 		</dependency>
 		
-		<!--  Logback Logging -->
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-              <version>${logback.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -88,7 +67,8 @@
 					<artifactId>sealights-maven-plugin</artifactId>
 					<configuration>
 						<appName>MavenExampleJUnitOnly</appName>
-						<buildScannerIgnoreLogEnabled>true</buildScannerIgnoreLogEnabled>	
+						<buildScannerIgnoreLogEnabled>true</buildScannerIgnoreLogEnabled>
+						<logEnabled>true</logEnabled>
 						<classLoadersExcluded>no</classLoadersExcluded>
 					</configuration>
 				</plugin>	        
