--- a/versions.gradle
+++ b/versions.gradle
@@ -2,10 +2,10 @@ ext {
     jmockitVersion = '1.29'
     mockitoVersion = '1.10.19'
     versions = [
-            // For usage of the local version under development
-            sealights:['2.0.0-SNAPSHOT'],
-            // For the official latest version (from local Nexus repo)
-            //sealights:['latest.release'],
+// For usage of the local version under development
+//              sealights:['2.0.0-SNAPSHOT'],
+// For the official latest version (from local Nexus repo)
+            sealights:['latest.release'],
             junit:['4.12'],
             mockito:['1.10.19'],
             powermock:['1.7.1'],
