SLDEV-4109 - deleted comments from poms and build.gradle, references to local sealights repositories , cassandra example (was not in use)

--- a/example-java8/build.gradle
+++ b/example-java8/build.gradle
@@ -13,14 +13,7 @@ dependencies {
  */
 buildscript {
     repositories {
-        // jcenter()
-        maven {
-            credentials {
-                username "devops"
-                password "s2015l"
-            }
-            url "http://nex.sealights.co:8081/repository/sealights-internal"
-        }
+		mavenCentral()
         mavenLocal()
     }
 }
