--- a/example-junit-only/build.gradle
+++ b/example-junit-only/build.gradle
@@ -2,7 +2,6 @@
 dependencies {
     testCompile "junit:junit:${versions.junit}"
     testCompile "org.mockito:mockito-all:${versions.mockito}"
-//    testCompile "org.powermock:powermock-mockito-release-full:${versions.powermock}"
     testCompile "org.powermock:powermock-api-mockito:${versions.powermock}"
     testCompile "org.powermock:powermock-module-junit4:${versions.powermock}"
     testCompile "org.powermock:powermock-module-junit4-rule-agent:${versions.powermock}"
@@ -17,13 +16,7 @@ dependencies {
 
 buildscript {
     repositories {
-        maven {
-            credentials {
-                username "devops"
-                password "s2015l"
-            }
-            url "http://nex.sealights.co:8081/repository/sealights-internal"
-        }
+        mavenCentral()
         mavenLocal()
     }
 }
