--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ apply from: 'versions.gradle'
 subprojects {
     if (it.name != 'example_junit5') {
         apply from: '../general-settings.gradle'
-//        apply from: '../versions.gradle'
         apply from: '../jacoco-cfg.gradle'
     }
 }
@@ -40,18 +39,9 @@ dependencies {
 buildscript {
     repositories {
         mavenCentral()
-        maven {
-            credentials {
-                username "devops"
-                password "s2015l"
-            }
-            url "http://nex.sealights.co:8081/repository/sealights-internal"
-        }
         mavenLocal()
     }
     dependencies {
-        // classpath 'io.sealights.on-premise.agents.plugin:sealights-gradle-plugin:2.0.0-SNAPSHOT'
-        //classpath 'io.sealights.on-premise.agents.plugin:sealights-gradle-plugin:2.0.45'
         classpath 'io.sealights.on-premise.agents.plugin:sealights-gradle-plugin:latest.release'
     }
 }
@@ -67,11 +57,7 @@ subprojects {
         sealights {
             includeResources = true
             //tokenFile = path/to/token
-            tokenFile = "C:/SL/ENV/tokens/sl_token_ala.txt"
-            //workspacepath=${sourceSets.main.output.classesDir}
-            // workspacepath=System.getProperty('ws')
-            // tokenFile = "/mnt/c/SL/ENV/tokens/sl_token_ala.txt"
-            //buildSessionIdFile = "buildSessionId.txt"
+            //example:tokenFile = "C:/SL/ENV/tokens/sl_token_ala.txt"
             logEnabled = true
             logLevel = "info"
             logToFile = true
@@ -85,11 +71,6 @@ subprojects {
             build = System.getProperty('sl.build')
             createBuildSessionId = true
             filesExcluded = "*Test"
-            // buildScannerIgnoreLogEnabled=true
-            // testListenerIgnoreLogEnabled=true
-            // testStage = "ut1"
-//             testListenerJar = "C:/Users/ala schneider/Dev/SL.OnPremise.Agents.Java/java-agent-bootstrapper/target/java-agent-bootstrapper-1.0.0-SNAPSHOT.jar"
-//             buildScannerJar = "C:/Users/ala schneider/Dev/SL.OnPremise.Agents.Java/java-build-agent/target/java-build-agent-1.0.0-SNAPSHOT.jar"
             // The test tasks names for applying the test listener
             // If not provided, the default tasks are assigned like in commented value
             //testTasks=["test", "junitPlatformTest", "integrationTest"]
