--- a/pom.xml
+++ b/pom.xml
@@ -19,34 +19,17 @@
 		<testng.version>6.9.4</testng.version>
 		<junit.version>4.12</junit.version>
 		<mockito.version>1.10.19</mockito.version>
-<!-- 		<powermock.version>1.6.4</powermock.version> -->
 		<powermock.version>1.7.1</powermock.version>
 		
 		<!-- Java and Plugins versions -->
-		<!-- <java.version>1.7</java.version> -->
-		<!-- <maven.compiler.source>1.7</maven.compiler.source> -->
-		<!-- <maven.compiler.target>1.7</maven.compiler.target> -->
-		<!-- <maven.jar.plugin.version>2.4</maven.jar.plugin.version> -->
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
 		<maven.surefire.plugin.version>2.20.1</maven.surefire.plugin.version>
-		<!-- The development version  -->
-		<!-- sealights.plugin.version>2.0.0</sealights.plugin.version> -->
-		<!-- Recent version  -->
-		<sealights.plugin.version>2.0.303</sealights.plugin.version>
+		<sealights.plugin.version>2.1.438</sealights.plugin.version>
 		
 		<!--  jacoco configuration -->
 		<maven.jacoco.plugin.version>0.8.0</maven.jacoco.plugin.version>
 		<jacoco.reportPath>${project.build.directory}/jacoco-ut.exec</jacoco.reportPath>
 		<jacoco.reportPathIT>${project.build.directory}/jacoco-it.exec</jacoco.reportPathIT>
-		
-		<!-- debugging stuff -->
-<!--         <sealights.skip>true</sealights.skip> -->
-        <sldebugOn>-agentlib:jdwp=transport=dt_socket,server=n,address=DESKTOP-FC1M245:5005,suspend=y</sldebugOn>
-<!--         <sealightsArgLine> </sealightsArgLine> -->
-        <sldebugOff> </sldebugOff>
-        <sldebug>${sldebugOff}</sldebug>
-        <!-- Set this for debugging of test listener-->
-<!--         <sldebug>${sldebugOn}</sldebug> -->
 	</properties>
 
 	<modules>
@@ -54,7 +37,6 @@
 		<module>example-java8</module>
     	<module>example-junit-testng</module>
     	<module>example-junit5</module>
-<!--     	<module>example-cassandra</module> -->
   		<module>example-testng-only</module>
 	</modules>
 	
@@ -139,7 +121,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>2.19.1</version>
+					<version>${maven.surefire.plugin.version}</version>
 					<executions>
 						<execution>
 							<goals>
@@ -162,8 +144,6 @@
 						<!--Path to valid token should be set-->
 						<!--<tokenFile>path/to/token</tokenFile>-->
 						<!--<tokenFile>C:\SL\ENV\tokens\sl_token_ala.txt</tokenFile>-->
-						<!-- Linux env -->
-						<!-- <tokenFile>sl_ala1_token.txt</tokenFile> -->
 						<build>${sl.build}</build>
 						<branch>master</branch>
 						<createBuildSessionId>true</createBuildSessionId>
@@ -174,37 +154,16 @@
 						<packagesincluded>io.sl.ex.*</packagesincluded>
 						<filesexcluded>*test-classes*</filesexcluded>
 						<logEnabled>true</logEnabled>
-						<logLevel>debug</logLevel>
+						<logLevel>info</logLevel>
 						<logToConsole>true</logToConsole>
 						<logToFile>true</logToFile>
 						<testStage>Unit Tests</testStage>
-						<!-- <buildScannerIgnoreLogEnabled>true</buildScannerIgnoreLogEnabled> -->
-						<!-- <testListenerIgnoreLogEnabled>true</testListenerIgnoreLogEnabled> -->
-						<!-- <enableUpgrade>true</enableUpgrade> -->
-						<!-- This is for fiddler -->
-						<!--<proxy>127.0.0.1:8888</proxy> -->
-						<!--<server>http://54.154.181.128:8080/api</server> -->
 						<sendContributors>true</sendContributors>
-<!-- 						<testListenerJar>C:\Users\ala schneider\Dev\SL.OnPremise.Agents.Java\java-agent-bootstrapper\target\java-agent-bootstrapper-1.0.0-SNAPSHOT.jar</testListenerJar>
-						<buildScannerJar>C:\Users\ala schneider\Dev\SL.OnPremise.Agents.Java\java-build-agent\target\java-build-agent-1.0.0-SNAPSHOT.jar</buildScannerJar>
- -->
- 						<!-- Linux env -->
-<!-- 		            <buildScannerJar>../SL.OnPremise.Agents.Java/java-build-agent/target/java-build-agent-1.0.0-SNAPSHOT.jar</buildScannerJar>
-		                <testListenerJar>../SL.OnPremise.Agents.Java/java-agent-bootstrapper/target/java-agent-bootstrapper-1.0.0-SNAPSHOT.jar</testListenerJar>
- --> 
  						<sealightsJvmParams>
-							<!-- <sl.scm.baseUrl>https://github.com/alasch2/MavenExample/</sl.scm.baseUrl> -->
-							<!-- <sl.scm>none</sl.scm> -->
-							<!-- <sl.scm.provider>github</sl.scm.provider> -->
-							<!-- <sl.scm.version>4.6</sl.scm.version> -->
 							<sl.featuresData.reportOnGettersAndSetters>false</sl.featuresData.reportOnGettersAndSetters>
 							<sl.featuresData.reportOnConstructors>false</sl.featuresData.reportOnConstructors>
 							<sl.featuresData.sendPartialFootprints>false</sl.featuresData.sendPartialFootprints>
 						</sealightsJvmParams>
-							<!-- <metadata> -->
-							<!-- 	<jobName>${JOB_NAME}</jobName> -->
-							<!-- 	<logsUrl>${BUILD_URL}/console</logsUrl> -->
-							<!-- </metadata> -->
 						<classLoadersExcluded>no</classLoadersExcluded>
 					</configuration>
 					<executions>
@@ -292,7 +251,7 @@
 			            <groupId>org.apache.maven.plugins</groupId>
 			            <artifactId>maven-surefire-plugin</artifactId>
 			            <configuration>
-			            	<argLine>${sldebug} ${sealightsArgLine}</argLine>
+			            	<argLine>${sealightsArgLine}</argLine>
 			            </configuration>
 			        </plugin>
 			        
@@ -313,7 +272,6 @@
 						<!-- using different application name and packages -->
 						<configuration>
 							<appName>AllMavenExamples</appName>
-							<!-- <appName>AllMavenExamples-Linux</appName> -->
 						</configuration>
 					</plugin>
 					
